@@ -117,9 +117,8 @@ static OPTION _hc08_options[] =
 static void
 _hc08_finaliseOptions (void)
 {
-  if (options.noXinitOpt) {
-    port->genXINIT=0;
-  }
+  if (options.noXinitOpt)
+    port->genXINIT = 0;
 
   if (options.model == MODEL_LARGE) {
       port->mem.default_local_map = xdata;
@@ -172,7 +171,6 @@ _hc08_genAssemblerPreamble (FILE * of)
   fprintf (of, "\t.area %s\n",port->mem.const_name);
   fprintf (of, "\t.area %s\n",port->mem.data_name);
   fprintf (of, "\t.area %s\n",port->mem.overlay_name);
-  fprintf (of, "\t.area %s\n",port->mem.bit_name);
   fprintf (of, "\t.area %s\n",port->mem.xdata_name);
   fprintf (of, "\t.area %s\n",port->mem.xidata_name);
 
@@ -420,7 +418,6 @@ PORT hc08_port =
   },
   /* tags for generic pointers */
   { 0x00, 0x40, 0x60, 0x80 },           /* far, near, xstack, code */
-
   {
     "XSEG",
     "STACK",
@@ -429,14 +426,14 @@ PORT hc08_port =
     NULL, /* "ISEG" */
     NULL, /* "PSEG" */
     "XSEG",
-    "BSEG",
+    NULL, /* "BSEG" */
     "RSEG    (ABS)",
     "GSINIT  (CODE)",
     "OSEG    (PAG, OVR)",
     "GSFINAL (CODE)",
     "HOME    (CODE)",
-    "XISEG", // initialized xdata
-    "XINIT", // a code copy of xiseg
+    "XISEG",              // initialized xdata
+    "XINIT",              // a code copy of xiseg
     "CONST   (CODE)",     // const_name - const data (code or not)
     "CABS    (ABS,CODE)", // cabs_name - const absolute data (code or not)
     "XABS    (ABS)",      // xabs_name - absolute xdata
